Added Journal Obj

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                 <button class="delete">Delete Entry</button>
             </section>
         </article>
+        <script type="module" src="./scripts/main.js"></script>
     </main>
     <footer class="footer">
         <img class="copyright" src="">
         <a href="#">GitHub</a>
     </footer>
-    
 </body>
 </html>
