--- a/index.html
+++ b/index.html
@@ -14,16 +14,13 @@
         <h1 class="name">Daily Journal</h1>
     </header>
     <main class="main">
-        <h2></h2>
-        <section class="formAndEntry">
-            <article class="entries">
-            </article>
-        </section>
-            <article class="listOfEntries">
-            </article>
+        <section class="formAndEntry"></section>
+        <section class="entries"></section>
+        
         <script type="module" src="./scripts/main.js"></script>
     </main>
     <footer class="footer">
+        <img class="flower" src="./images/arrang_1.png">
     </footer>
 </body>
 </html>
